--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,8 @@ repo: parti-mx-upptime # The name of this repository
 sites:
   - name: 빠띠
     url: https://parti.coop
+  - name: Parti
+    url: https://parti.coop
   - name: 빠띠 그룹스
     url: https://parti.xyz
   - name: 빠띠 타운홀
