--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,19 +3,17 @@ owner: parti-coop # Your GitHub organization or username, where this repository 
 repo: parti-mx-upptime # The name of this repository
 
 sites:
-  - name: 빠띠
-    url: https://parti.coop
   - name: Parti
     url: https://parti.coop
-  - name: 빠띠 그룹스
+  - name: Parti Groups
     url: https://parti.xyz
-  - name: 빠띠 타운홀
+  - name: Parti Townhall
     url: https://townhall.kr/
-  - name: 빠띠 믹스
+  - name: Parti Mx
     url: https://parti.mx
-  - name: 빠띠 캠페인즈
+  - name: Parti Campaigns
     url: https://campaigns.kr
-  - name: 데이터퍼블릭
+  - name: DataPublic
     url: https://datapublic.kr
 
 status-website:
